# Sensor-Dashboard

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  readings.py  sensors.py
backend/app/db/: database.py  models.py
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(dashboard)/: layout.module.css  layout.tsx
frontend/src/app/(dashboard)/dashboard/: page.module.css  page.tsx
frontend/src/app/(dashboard)/sensors/: page.module.css  page.tsx
frontend/src/app/(dashboard)/sensors/_components/: SensorsTable.tsx
frontend/src/app/(dashboard)/sensors/_components/SensorFormDialog/: SensorFormDialog.module.css  SensorFormDialog.tsx
frontend/src/app/(dashboard)/sensors/_components/SensorsTable/: SensorsTable.module.css  SensorsTable.tsx
frontend/src/app/components/: LoginForm.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/sensors/: page.tsx
frontend/src/components/: Chart.tsx  ReadingsTable.tsx  SensorsTable.tsx
frontend/src/components/Chart/: Chart.module.css  Chart.tsx
frontend/src/components/DataTable/: DataTable.module.css  DataTable.tsx
frontend/src/components/ReadingsTable/: ReadingsTable.module.css  ReadingsTable.tsx
frontend/src/components/Sidebar/: Sidebar.module.css  Sidebar.tsx
frontend/src/hooks/: useReadings.ts  useSensors.ts
frontend/src/services/api/: index.ts  types.ts
