[tool.poetry]
name = "rsd-backend"
version = "0.1.0"
description = "Real-Time Sensor Dashboard backend"
authors = ["Orlov Sergei"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
sqlmodel = "^0.0.24"
asyncpg = "^0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
